Wed Aug  6 10:23:47 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/tests/InterfaceRepo/IDL_Test/Makefile:

          Fixed mistakes and updated dependencies.

Wed Aug  6 15:01:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ec_options.html:
          Extended documentation of RTEC options.

Tue Aug  5 15:20:00 UTC 2003  Gautam Thaker <gthaker@atl.lmco.com>

        Please email any questions/comments about this update to
        Jason Cohen, jcohen@atl.lmco.com

        * tao/Strategies/SCIOP_Connection_Handler.cpp:

          Changed IPPROTO_IP reference to IPPROTO_SCTP.
          Fixed hardcoded SCTP_NODELAY option to allow stock RH9
          to build SCIOP code without implementation support.

Tue Aug  5 17:31:17 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
        * orbsvcs/orbsvcs/IFRService/ComponentContainer_i.cpp:
        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:
        * orbsvcs/tests/InterfaceRepo/IDL3_Test/client.cpp:
        * orbsvcs/tests/InterfaceRepo/IDL3_Test/idl3_client.cpp:
        * orbsvcs/tests/InterfaceRepo/IDL3_Test/idl3_client.h:
        * orbsvcs/tests/InterfaceRepo/IDL3_Test/test.idl:

          Added test of eventtype support, and fixed related bugs.

Tue Aug  5 15:51:44 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/tests/InterfaceRepo/IDL3_Test/idl3_client.cpp:

          Minor cosmetic changes.

        * orbsvcs/tests/InterfaceRepo/Makefile:

          Added the new test to the directory list.

        * orbsvcs/tests/InterfaceRepo/IDL3_Test/InterfaceRepo_IDL3_Test.mpc:
        * orbsvcs/tests/InterfaceRepo/IDL3_Test/Makefile:
        * orbsvcs/tests/InterfaceRepo/IDL3_Test/README:
        * orbsvcs/tests/InterfaceRepo/IDL3_Test/run_test.pl:

          New files to complete the test integration.

Tue Aug  5 14:01:32 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_home.cpp: