@@ -1,3 +1,9 @@
+Wed Aug  6 10:44:08 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
+
+          Removed unused local variables.
+
 Wed Aug  6 10:23:47 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * orbsvcs/tests/InterfaceRepo/IDL_Test/Makefile:
